Fix deprected usage if 'newInstance'